fixed column gap setting for GT Columns block

--- a/src/components/grid-container/style.scss
+++ b/src/components/grid-container/style.scss
@@ -2,23 +2,23 @@
 	--gt-column-gap: 1.5em;
 }
 
-.gt-grid-container.gt-none-column-gap {
+.gt-none-column-gap {
 	--gt-column-gap: 0;
 }
 
-.gt-grid-container.gt-small-column-gap {
+.gt-small-column-gap {
 	--gt-column-gap: 1rem;
 }
 
-.gt-grid-container.gt-medium-column-gap {
+.gt-medium-column-gap {
 	--gt-column-gap: 2rem;
 }
 
-.gt-grid-container.gt-large-column-gap {
+.gt-large-column-gap {
 	--gt-column-gap: 3rem;
 }
 
-.gt-grid-container.gt-extra-large-column-gap {
+.gt-extra-large-column-gap {
 	--gt-column-gap: 4rem;
 }
 
